[package]
name = "ren"
version = "0.1.4"
authors = ["eomain"]
description = "Communicate with the windowing system using a simple messaging interface"
keywords = ["ui", "gui", "windowing-system", "async", "graphics"]
categories = ["gui"]
edition = "2018"

[features]
default = []
async-rt = ["async-std"]
cairo = ["cairo-rs"]
render = ["cairo-rs"]

[dependencies.mirage]
git = "https://github.com/eomain/mirage"

[dependencies.xcb]
version = "0.9"
features = ["thread"]

[dependencies.uuid]
version = "0.4"
features = ["v4"]

[dependencies.async-std]
version = "1.8.0"
features = ["unstable"]
optional = true

[dependencies.cairo-rs]
version = "0.9.1"
default-features = false
features = ["xcb", "png", "svg"]
optional = true

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 2
debug = false
